--- a/package.json
+++ b/package.json
@@ -17,6 +17,6 @@
     "http": "^0.0.1-security",
     "node-fetch": "^2.6.6",
     "nodemon": "^3.1.0",
-    "path": "^0.12.7",
+    "path": "^0.12.7"
   }
 }
